# rc

./: .gitignore  CMakeLists.txt  kernel.cuh  main.cu  math.cuh  structs.cuh
